--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid" >
         <div class="card " >
             <div class="row flex-column-reverse flex-lg-row g-0">
               <div class="col-md-6 col-12">
                 <img src="Capture.JPG" class="img-fluid rounded-start" alt="...">
               </div>
-              <div class="col-md-6 col-12 mt-5 p-5 ">
-                <div class="card-body  mt-3   p-5   ">
+              <div class="col-md-6 col-12 p-5  "style="background: #F7F7F7;">
+                <div class="card-body  mt-5   p-5   " >
                     
                             <h5 class="card-title ">Homeware that puts quality and style at the heart of its brand</h5>
                             <p class="card-text">With our new collection, view over 400 bespoke pieces
                             from homeware through to furniture today</p>
-                            <a href="#" class="btn btn-white   "><h6 class="white text-center">View collection</h6></a>
+                            <span><a href="#" class="btn   " style="background-color: #FFFFFF;" ><h6 class="white text-center">View collection</h6></a></span>
                 </div>
               </div>
             </div>
