--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="container-fluid" >
-        <div class="card " >
+        <div class="card "  style="max-width: 1300px;">
             <div class="row flex-column-reverse flex-lg-row g-0">
               <div class="col-md-6 col-12">
                 <img src="Capture.JPG" class="img-fluid rounded-start" alt="...">
