--- a/index.html
+++ b/index.html
@@ -12,20 +12,23 @@
 </head>
 <body>
 <div class="h-100 container-fluid">
-  <div class="h-100 row flex-column-reverse">
-    <div class="col-md-6 col-12">
+  <div class="h-100 row  flex-colomn-reverse flex-md-row flex-sm-column-reverse ">
+    <div class="col-md-6 col-12 p-0">
       <div class="image ">
         <img class="img-fluid " src="50 50 Split.jpg">
 
       </div>
     </div>
-      <div class="h-100 col-md-6 col-12 p-5   "style="background: #F7F7F7;">
-        <div class="text mt-5   p-5   " >
-            
-                    <h5 class="card-title ">Homeware that puts quality and style at the heart of its brand</h5>
+      <div class="h-100 col-md-6 col-12 p-0  "style="background: #F7F7F7;">
+        <div class="text mt-5 mb-5     " >
+            <div class="cont-text ">
+              <h5 class="card-title ">Homeware that puts quality and style at the heart of its brand</h5>
                     <p class="card-text">With our new collection, view over 400 bespoke pieces
                     from homeware through to furniture today</p>
                     <span><a href="#" class="btn   " style="background-color: #FFFFFF;" ><h6 class="white text-center">View collection</h6></a></span>
+
+            </div>
+                    
         </div>
       </div>
 
