--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="h-100 container-fluid">
-  <div class="h-100 row  flex-colomn-reverse flex-md-row flex-sm-column-reverse ">
+  <div class="h-100 row  flex-colomn-reverse flex-md-row flex-sm-column-reverse box">
     <div class="col-md-6 col-12 p-0">
       <div class="image ">
         <img class="img-fluid " src="50 50 Split.jpg">
